Use .of - Replace Arrays.asList with List.of - Replace HashSet<>(List.of()) with Set.of