@@ -24,7 +24,6 @@
 package com.iluwatar.composite;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -38,19 +37,19 @@ public class Messenger {
 
     List<Word> words = new ArrayList<>();
 
-    words.add(new Word(Arrays.asList(new Letter('W'), new Letter('h'), new Letter('e'), new Letter(
+    words.add(new Word(List.of(new Letter('W'), new Letter('h'), new Letter('e'), new Letter(
         'r'), new Letter('e'))));
-    words.add(new Word(Arrays.asList(new Letter('t'), new Letter('h'), new Letter('e'), new Letter(
+    words.add(new Word(List.of(new Letter('t'), new Letter('h'), new Letter('e'), new Letter(
         'r'), new Letter('e'))));
-    words.add(new Word(Arrays.asList(new Letter('i'), new Letter('s'))));
-    words.add(new Word(Arrays.asList(new Letter('a'))));
-    words.add(new Word(Arrays.asList(new Letter('w'), new Letter('h'), new Letter('i'), new Letter(
+    words.add(new Word(List.of(new Letter('i'), new Letter('s'))));
+    words.add(new Word(List.of(new Letter('a'))));
+    words.add(new Word(List.of(new Letter('w'), new Letter('h'), new Letter('i'), new Letter(
         'p'))));
-    words.add(new Word(Arrays.asList(new Letter('t'), new Letter('h'), new Letter('e'), new Letter(
+    words.add(new Word(List.of(new Letter('t'), new Letter('h'), new Letter('e'), new Letter(
         'r'), new Letter('e'))));
-    words.add(new Word(Arrays.asList(new Letter('i'), new Letter('s'))));
-    words.add(new Word(Arrays.asList(new Letter('a'))));
-    words.add(new Word(Arrays.asList(new Letter('w'), new Letter('a'), new Letter('y'))));
+    words.add(new Word(List.of(new Letter('i'), new Letter('s'))));
+    words.add(new Word(List.of(new Letter('a'))));
+    words.add(new Word(List.of(new Letter('w'), new Letter('a'), new Letter('y'))));
 
     return new Sentence(words);
 
@@ -60,17 +59,17 @@ public class Messenger {
 
     List<Word> words = new ArrayList<>();
 
-    words.add(new Word(Arrays.asList(new Letter('M'), new Letter('u'), new Letter('c'), new Letter(
+    words.add(new Word(List.of(new Letter('M'), new Letter('u'), new Letter('c'), new Letter(
         'h'))));
-    words.add(new Word(Arrays.asList(new Letter('w'), new Letter('i'), new Letter('n'), new Letter(
+    words.add(new Word(List.of(new Letter('w'), new Letter('i'), new Letter('n'), new Letter(
         'd'))));
-    words.add(new Word(Arrays.asList(new Letter('p'), new Letter('o'), new Letter('u'), new Letter(
+    words.add(new Word(List.of(new Letter('p'), new Letter('o'), new Letter('u'), new Letter(
         'r'), new Letter('s'))));
-    words.add(new Word(Arrays.asList(new Letter('f'), new Letter('r'), new Letter('o'), new Letter(
+    words.add(new Word(List.of(new Letter('f'), new Letter('r'), new Letter('o'), new Letter(
         'm'))));
-    words.add(new Word(Arrays.asList(new Letter('y'), new Letter('o'), new Letter('u'), new Letter(
+    words.add(new Word(List.of(new Letter('y'), new Letter('o'), new Letter('u'), new Letter(
         'r'))));
-    words.add(new Word(Arrays.asList(new Letter('m'), new Letter('o'), new Letter('u'), new Letter(
+    words.add(new Word(List.of(new Letter('m'), new Letter('o'), new Letter('u'), new Letter(
         't'), new Letter('h'))));
 
     return new Sentence(words);
