@@ -23,7 +23,7 @@
 
 package com.iluwatar.layers;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * 
@@ -99,7 +99,7 @@ public class App {
     cakeBakingService.saveNewTopping(new CakeToppingInfo("cherry", 350));
 
     CakeInfo cake1 =
-        new CakeInfo(new CakeToppingInfo("candies", 0), Arrays.asList(new CakeLayerInfo(
+            new CakeInfo(new CakeToppingInfo("candies", 0), List.of(new CakeLayerInfo(
             "chocolate", 0), new CakeLayerInfo("banana", 0), new CakeLayerInfo("strawberry", 0)));
     try {
       cakeBakingService.bakeNewCake(cake1);
@@ -107,7 +107,7 @@ public class App {
       e.printStackTrace();
     }
     CakeInfo cake2 =
-        new CakeInfo(new CakeToppingInfo("cherry", 0), Arrays.asList(
+            new CakeInfo(new CakeToppingInfo("cherry", 0), List.of(
             new CakeLayerInfo("vanilla", 0), new CakeLayerInfo("lemon", 0), new CakeLayerInfo(
                 "strawberry", 0)));
     try {
